--- a/WEB/src/app/app.component.html
+++ b/WEB/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div class="alert alert-primary" role="alert">
-  A simple primary alert—check it out!
-</div>
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
+
