--- a/WEB/src/app/navbar/navbar.component.html
+++ b/WEB/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-3">
-  <a class="navbar-brand" routerLink="/">JobTracker</a>
+  <a class="navbar-brand" routerLink="/main-menu">JobTracker</a>
   <button
     class="navbar-toggler"
     type="button"
